<resources>
    <string name="app_name">JournalApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">JournalApp - Sign in</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_main">My Diary</string>
    <string name="action_switch_auth">Create an account</string>
    <string name="action_switch_auth_login">Already registered? Login instead</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_edit">Edit</string>

    <string name="add_button_text">Save Entry</string>
    <string name="FB_DB_KEY">DiaryEntry</string>
    <string name="tv_addStringTitle">Enter a title for this entry</string>
    <string name="add_edit_content_title">What\'s on your mind?</string>
    <string name="hint_diary_content">Enter your thoughts in here</string>
    <string name="hint_diary_title">Enter a title for this entry</string>
    <string name="cancel_save_operation">Cancel</string>
    <string name="save_operation">Yes! Proceed</string>

    <string name="tv_entry_title">Title</string>
    <string name="tv_entry_content">Content</string>

    <string name="save_operation_successful">Operation completed successfully.</string>
    <string name="save_operation_failed">Operation failed.</string>

    <string name="dialog_confirm_title">Confirmation Required</string>
    <string name="dialog_confirm_body">Are you sure you want to proceed?</string>
</resources>
